# actinn-jax-benchmark

./: .gitignore  README.md  pyproject.toml
benchmark/: __init__.py  datasets.py  driver.py  metrics.py  prep.py  resources.py  runner.py
benchmark/adapters/: __init__.py  actinn_jax_adapter.py  actinn_orig_adapter.py  base.py  celltypist_adapter.py  knn_adapter.py  r_adapter.py  scprint_adapter.py  scvi_adapter.py  svm_adapter.py
benchmark/explore/: atlas_classifier.py  build_broad_model.py  build_census_model.py  build_from_emb.py  build_zonation_ref.py  census_fetch.py  census_train.py  cross_dataset_zonation.py  discover_hierarchy.py  embed_broad.py  fetch_broad_reference.py  fetch_census_wide.py  fetch_liver_query.py  fetch_multitissue.py  fetch_tabula_sapiens.py  scprint_run.py  two_stage_compare.py  two_stage_embed.py  zonation_classify.py
benchmark/r/: run_r_method.R
configs/: lung.yaml  lung_orig.yaml  lung_r.yaml  pbmc.yaml  pbmc_all.yaml  scprint.yaml  smoke.yaml
docs/: AWS_GPU.md  METHODS_SURVEY.md  MODEL_FLOW.md  RESULTS.md  RESULTS_actinn_orig.md  RESULTS_phase1.md  SCPRINT_AND_CPU_CLASSIFIER.md  TWO_STAGE.md  ZONATION.md  results_cross_zonation.csv  results_lung_final.csv  results_lung_r.csv  results_pbmc.csv  results_pbmc_all.csv  results_phase1_lung.csv  results_scprint.csv  results_two_stage.csv  results_two_stage_8organ.csv  results_two_stage_atlas.csv  results_two_stage_tabula_sapiens.csv  results_zonation.csv
envs/: README.md
